Fix minor issue

--- a/_posts/2020-12-04-welcome.md
+++ b/_posts/2020-12-04-welcome.md
@@ -52,7 +52,7 @@ The first thing I want you to know is that I and your mother love you very
 much. I have never seen you yet but still, feel love for you quite strongly. I
 don't remember the last time I cried out of joy and pure emotion and it also
 doesn't go with my current image but I will most probably cry a little when I
-first hold you in my arms. I will stop most only when you cry out louder from
+first hold you in my arms. I will stop only when you cry out louder from
 the realization that you have an ugly father.
 
 I know that it will take time for us to communicate verbally but till then I
