fix small errors

--- a/_posts/2020-12-04-welcome.md
+++ b/_posts/2020-12-04-welcome.md
@@ -12,7 +12,7 @@ This bit of news and the title of this piece should make perfect sense now but
 I still want to explain why this article was needed. 
 
 It is only by looking backward that I realize that we were kids when we got
-married.  We got married with the expectation, that it would be fun to stay
+married.  We got married with the expectation that it would be fun to stay
 together.  Boy, were we naive back then. It was a bumpy ride, to say the least,
 but we never forgot to enjoy the view. Our five years of marriage can be summed
 up in one sentence as lots of food, lots of traveling, weekly quarrels, and
@@ -65,9 +65,9 @@ considerate enough to smile now and then, it will make my day.
 
 I do not wish to give you everything that you want, let that be clear from now
 on, or the things I did not have as a child but I wish to teach you all that I
-wish I knew earlier.  I want to teach you that there is a correct and a wrong
+wish I knew earlier.  I want to teach you that there is a right and a wrong
 answer to the question `What do you want to become when you grow up?`. Doctor,
-engineer, lawyer, actor, etc are all wrong answers. The only correct answer is
+engineer, lawyer, actor, etc are all wrong answers. The only right answer is
 `I want to be happy`. Similarly, I don't wish for you to have just a house, a
 shiny car, or a huge bank balance.  These things are good to have but what I
 really hope you have is a purpose in life.
