Post resolutions Fix tags Add tags to all posts

--- a/_posts/2020-12-04-welcome.md
+++ b/_posts/2020-12-04-welcome.md
@@ -3,6 +3,15 @@ layout: post
 category: random
 title: Welcome!!! 
 permalink: /welcome/
+tags:
+    - "2020"
+    - personal
+    - random rambling
+    - family
+    - self
+    - fatherhood
+    - children
+    - relationships
 ---
 
 For those who don't know yet, Sagnika and I are expecting our first baby in
